--- a/scratch/ftemp/style.css
+++ b/scratch/ftemp/style.css
@@ -62,7 +62,7 @@ body {
 }
 
 .top-bar-menu-container {
-  display: block;
+  display: none;
 }
 
 .top-bar-menu a {
@@ -164,7 +164,7 @@ body {
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 450px) {
   .hamburger {
     display: block;
     position: relative;
@@ -179,7 +179,7 @@ body {
     background: var(--color-bg);
   }
 
-  .top-bar-menu {
+  #slide-menu {
     width: 100%;
     height: 100%;
     display: flex;
@@ -187,6 +187,10 @@ body {
     justify-content: center;
     gap: 0em;
     opacity: 1;
+  }
+
+  #top-menu {
+    display: none;
   }
 
   .top-bar-menu a {
