--- a/scratch/ftemp/style.css
+++ b/scratch/ftemp/style.css
@@ -7,7 +7,7 @@
   --color-bg: #fafafa;
   --color-bga: #fafafacc;
   --color-accent: #2e2;
-  --page-width: 1200px;
+  --page-width: 1100px;
 }
 
 * {
@@ -22,9 +22,7 @@ body {
   font-family: var(--font-primary);
   background: var(--color-bg);
   color: var(--color-fg);
-  padding: 1em;
   margin: 0 auto;
-  max-width: var(--page-width);
 }
 
 .top-bar-container {
@@ -59,6 +57,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.logo:hover {
+  border: .75em solid #a8a;
 }
 
 .top-bar-menu-container {
@@ -96,29 +98,52 @@ body {
   margin: .45em 0;
 }
 
+/* Hero Container */
+
 .hero-container {
   height: 100vh;
-
+  max-width: var(--page-width);
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.hero-background {
+  background-image: url("images/hamster1-2x.jpg");
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  filter: brightness(100%) contrast(80%);
+}
 
 .hero-container > div {
-  margin-left: 30vw;
+  position: absolute;
+  right: 0;
+  padding: 3em;
 }
 
 .hero-title {
-  font-weight: 150;
+  font-weight: 200;
+  font-size: 3.5rem;
 }
 
 .hero-subtitle {
   font-weight: 600;
 }
 
+main {
+  max-width: var(--page-width);
+  margin: 0 auto;
+}
+
 .row {
-  margin: 12em 0;
+  margin-top: 12em;
   padding: 0 4em;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -126,12 +151,14 @@ body {
   gap: 3em;
 }
 
+
 .section-title {
   font-size: 1.5rem;
 }
 
 .row img {
   width: 100%;
+  max-width: 450px;
   display: block;
 }
 
@@ -145,7 +172,94 @@ body {
 .left {place-self: center left;}
 .right {place-self: center right;}
 
+
+.info-card-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1em;
+  padding: 0 1em;
+  margin: 8em 0;
+}
+
+.info-card {
+  padding: 2em;
+  /* aspect-ratio: 1 / 1.2; */
+  transition: all .25s;
+  /* outline: 1px dashed red; */
+}
+
+.info-card:hover {
+  transform: scale(1.1);
+  box-shadow: 0 15px 20px -16px;
+}
+
+.info-card img {
+  width: 100%;
+  height: 40vmin;
+  object-fit: contain;
+}
+
+.info-card-title {
+  margin-top: .5em;
+  margin-bottom: .25em;
+  font-size: 1.25rem;
+}
+
+/* footer */
+footer {
+  position: relative;
+  margin: 0 auto;
+  margin-top: 5em;
+  background: var(--color-fg);
+  color: var(--color-bg);
+  padding: 1.5em;
+  padding-bottom: .5em;
+}
+
+.copyright {
+  text-align: center;
+  padding: 1em 0 .25em 0;
+  font-size: .75rem;
+  margin-top: .5em;
+}
+
+.social-menu {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+}
+
+.social-icon {
+  width: 1.5em;
+  height: 1.5em;
+  color: var(--color-bg);
+  aspect-ratio: 1 / 1;
+  text-decoration: none;
+}
+
+.social-icon img {
+  display: block;
+  width: 100%;
+  filter: brightness(0) invert(98%);
+}
+
 @media (max-width: 700px) {
+  
+  .hero-container > div {
+    /* position: absolute; */
+    left: 0;
+    right: 0;
+    top: 3em;
+  }
+
+  .hero-title {
+    font-size: calc(1.2rem + 3vw);
+  }
+
+  .hero-subtitle {
+    font-size: calc(.5rem + 3vw);
+  }
+
   .row {
     grid-template-columns: 1fr;
     padding: 0 1em;
@@ -162,9 +276,15 @@ body {
   .text-box {
     order: 2;
   }
+
+  .info-card-container {
+    grid-template-columns: 1fr;
+    padding: 0 4em;
+  }
 }
 
 @media (max-width: 450px) {
+
   .hamburger {
     display: block;
     position: relative;
@@ -204,5 +324,20 @@ body {
 
   .top-bar-menu a:hover {
     background: var(--color-fg);
+  }
+
+  .info-card-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+    padding: 0 1em;
+  }
+
+  .info-card {
+    aspect-ratio: 1 / 1;
+  }
+
+  .info-card-text {
+    font-size: 1rem;
   }
 }
